Changed 404 styles, fixed scrollbar again

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@
 
 html {
   font-family: "Inter", sans-serif;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 @supports (font-variation-settings: normal) {
   html {
